Fix blurry rendering on Firefox

--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,8 @@ canvas {
 
 canvas#ld42 {
 	display: block;
+	image-rendering: crisp-edges;
+	image-rendering: -moz-crisp-edges;
 	image-rendering: pixelated;
 	margin: 0 auto;
 }
